eureka-deployment.yaml
# eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      containers:
        - name: eureka-service
          image: eureka-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-service
  ports:
    - port: 8761
      targetPort: 8761
