mysql-statefulset.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None # 1. Converted to a Headless Service
  ports:
    - port: 3306
  selector:
    app: mysql
